# catch-example

./: .travis.yml  CMakeLists.txt  factorialcatch.cpp  main.cpp  output.txt  rational.cpp  rational.h  rationalcatch.cpp  readme.md  simplecompile.sh  vectorcatch.cpp
